# RecApp

./: .flake8  .gitignore  CONTRIBUTING.md  CREDITS  README.md  about.ui  com.github.amikha1lov.RecApp.yaml  com.github.amikha1lov.recApp.json  com.github.amikha1lov.recApp.json~  com.github.amikha1lov.rec_app.json  main.py  meson.build  recapp.gresource.xml  recapp_constants.py  window.ui
.github/: pull_request_template.md
.github/workflows/: CI.yml  linting.yml
_build/: .ninja_deps  .ninja_log  build.ninja
_build/data/: com.github.amikha1lov.recApp.appdata.xml
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
_build/meson-logs/: install-log.txt  meson-log.txt
_build/src/: recapp  recapp.gresource
data/: com.github.amikha1lov.RecApp.appdata.xml.in  com.github.amikha1lov.RecApp.desktop.in  com.github.amikha1lov.RecApp.gschema.xml  com.github.amikha1lov.recApp.appdata.xml.in  com.github.amikha1lov.recApp.desktop.in  com.github.amikha1lov.recApp.gschema.xml  com.github.amikha1lov.rec_app.appdata.xml.in  com.github.amikha1lov.rec_app.desktop.in  com.github.amikha1lov.rec_app.gschema.xml  convert-icons-linux.sh  meson.build
data/icons/: convert-icons-linux.sh  meson.build
data/resources/: about.ui  meson.build  preferences.ui  primary-menu.ui  recapp.gresource.xml  selectlocation.ui  shortcuts.ui  style.css  window.ui
data/resources/icons/: meson.build
po/: LINGUAS  POTFILES  com.github.amikha1lov.RecApp.pot  com.github.amikha1lov.rec_app.pot  de.po  es.po  it.po  meson.build  nl.po  ru.po  tr.po
rpm/: rec-app.spec  rec_app.spec  recapp.spec
src/: #window.ui#  about.py  about.ui  main.py  meson.build  preferences.py  rec.py  rec_app.gresource.xml  rec_app.in  recapp.gresource.xml  recapp.in  recapp_constants.py  recording.py  shortcuts.py  window.py  window.ui  window.ui.h  window.ui~  xwininfo
