
install_data('data_icons_display-symbolic.svg',
             install_dir : 'share/icons/hicolor/symbolic/apps')
install_data('data_icons_selection-symbolic.svg',
             install_dir : 'share/icons/hicolor/symbolic/apps')
install_data('data_icons_window-symbolic.svg',
             install_dir : 'share/icons/hicolor/symbolic/apps')
